--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                                     <h2>Ремонт мобильных устройств</h2>
                                     <ul class="list-inline list-unstyled">
                                         <li>стоимость от 60 MDL</li>
-                                        <li>срок от 2 часов </li>
+                                        <li>срок от 1 часа</li>
                                     </ul>
                                     <p>
                                         Квалифицированный ремонт сотовых телефонов, смартфонов, планшетов.
@@ -154,7 +154,7 @@
                                     <h2>Ремонт ноутбуков</h2>
                                     <ul class="list-inline list-unstyled">
                                         <li>стоимость от 100 MDL</i></li>
-                                        <li>срок от 2 часов</li>
+                                        <li>срок от 1 часа</li>
                                     </ul>
                                     <p>Наши специалисты быстро и качественно найдут поломку в ноутбуке и устранят её. 
                                         Всегда в наличии запчасти, любой ремонт, чистка и модернизация. 
