--- a/remont-mobilnyh.html
+++ b/remont-mobilnyh.html
@@ -103,9 +103,9 @@
                                 <div class="carousel-caption">
                                     <h2>Замена дисплея</h2>
                                     <ul class="list-inline list-unstyled">
-                                        <li>стоимость от 150 MDL</li>
-                                        <li>стоимость запчасти от 150 MDL</li>
-                                        <li>время ремонта от 3 часов</li>
+                                        <li>стоимость от 60 MDL</li>
+                                        <li>стоимость запчасти от 80 MDL</li>
+                                        <li>время ремонта от 1 часа</li>
                                     </ul>
                                     <p>
 										Тачскрин устройства имеет небольшой запас прочности. Достаточно несильного падения или удара, как экран покрывается трещинами, цветными разводами и пятнами. В этом случае необходимо заменить дисплей (матрицу). 
@@ -124,7 +124,7 @@
                                 <div class="carousel-caption">
                                     <h2>Замена разъёмов</h2>
                                     <ul class="list-inline list-unstyled">
-                                        <li>стоимость от 400 MDL</li>
+                                        <li>стоимость от 150 MDL</li>
                                         <li>время ремонта от 1 часа</li>
                                     </ul>
                                     <p>
@@ -144,9 +144,9 @@
                                 <div class="carousel-caption">
                                     <h2>Замена динамика и микрофона</h2>
                                     <ul class="list-inline list-unstyled">
-                                        <li>стоимость от 250 MDL</li>
-                                        <li>стоимость запчастей от 200 MDL</li>
-                                        <li>время ремонта от 1,5 часов</li>
+                                        <li>стоимость от 60 MDL</li>
+                                        <li>стоимость запчастей от 30 MDL</li>
+                                        <li>время ремонта от 1 часа</li>
                                     </ul>
                                     <p>
                                         Признаки неисправности: звука нет в принципе, или он сильно искажён,
@@ -241,7 +241,7 @@
                                                 Время ремонта
                                             </td>
                                             <td class = "time_service second_time_service">
-                                                от 3 часов
+                                                от 1 часа
                                             </td>
                                         </tr>
                                         <tr>
@@ -249,7 +249,7 @@
                                                 Стоимость работы
                                             </td>
                                             <td class = "time_service first_time_service">
-                                                от <span>800</span> MDL.
+                                                от <span>60</span> MDL.
                                             </td>
                                         </tr>
                                         <tr>
@@ -257,14 +257,12 @@
                                                 Стоимость запчастей
                                             </td>
                                             <td class = "time_service second_time_service">
-                                                от 150 MDL.
+                                                от 80 MDL.
                                             </td>
                                         </tr>
                                     </table>
                                 </div>
                             </div>
-
-
                         </article>
 
                         <article class="col-md-3 col-sm-6 listing-item recent rent">
@@ -289,8 +287,6 @@
                                             </td>
                                             <td class = "time_service first_time_service">
 												USB-разъем постоянно подвержен механическому воздействию. Чем чаще мы им пользуемся, тянем за кабель, тем больше шансов, что со временем разъем придется заменить на новый.
-
-
                                             </td>
                                         </tr>
                                         <tr>
@@ -306,15 +302,12 @@
                                                 Стоимость работы
                                             </td>
                                             <td class = "time_service first_time_service">
-                                                от <span>400</span> MDL.
+                                                от <span>150</span> MDL.
                                             </td>
                                         </tr>
                                     </table>
-
-
                                 </div>
                             </div>
-
                         </article>
 
                         <article class="col-md-3 col-sm-6 listing-item rent">
@@ -347,7 +340,7 @@
                                                 Время ремонта
                                             </td>
                                             <td class = "time_service second_time_service">
-                                                от 1,5 часа
+                                                от 1 часа
                                             </td>
                                         </tr>
                                         <tr>
@@ -355,7 +348,7 @@
                                                 Стоимость работы
                                             </td>
                                             <td class = "time_service first_time_service">
-                                                от <span>250</span> MDL.
+                                                от <span>60</span> MDL.
                                             </td>
                                         </tr>
                                         <tr>
@@ -363,16 +356,14 @@
                                                 Стоимость запчастей
                                             </td>
                                             <td class = "time_service second_time_service">
-                                                от 200 MDL.
+                                                от 30 MDL.
                                             </td>
                                         </tr>
                                     </table>
-
-
                                 </div>
                             </div>
-
                         </article>
+
                         <article class="col-md-3 col-sm-6 listing-item rent">
                             <div class="listing-thumb">
                                 <a href="#" class="main-link">
@@ -404,7 +395,7 @@
                                                 Время ремонта
                                             </td>
                                             <td class = "time_service second_time_service">
-                                                от 2 часа
+                                                от 2 часов
                                             </td>
                                         </tr>
                                         <tr>
@@ -418,8 +409,8 @@
                                     </table>
                                 </div>
                             </div>
-
                         </article>
+
                         <article class="col-md-3 col-sm-6 listing-item rent">
                             <div class="listing-thumb">
                                 <a href="#" class="main-link">
@@ -448,7 +439,7 @@
                                                 Время ремонта
                                             </td>
                                             <td class = "time_service second_time_service">
-                                                от 2,5 часа
+                                                от 1,5 часа
                                             </td>
                                         </tr>
                                         <tr>
@@ -456,15 +447,14 @@
                                                 Стоимость работы
                                             </td>
                                             <td class = "time_service first_time_service">
-                                                от <span>250</span> MDL.
+                                                от <span>150</span> MDL.
                                             </td>
                                         </tr>
                                     </table>
-
                                 </div>
                             </div>
-
                         </article>
+
                         <article class="col-md-3 col-sm-6 listing-item rent">
                             <div class="listing-thumb">
                                 <a href="#" class="main-link">
@@ -503,7 +493,7 @@
                                                 Стоимость работы
                                             </td>
                                             <td class = "time_service first_time_service">
-                                                от <span>500</span> MDL.
+                                                от <span>200</span> MDL.
                                             </td>
                                         </tr>
                                         <tr>
@@ -511,14 +501,14 @@
                                                 Стоимость запчастей
                                             </td>
                                             <td class = "time_service second_time_service">
-                                                от 200 MDL.
+                                                от 500 MDL.
                                             </td>
                                         </tr>
                                     </table>
                                 </div>
                             </div>
-
                         </article>
+
                         <article class="col-md-3 col-sm-6 listing-item rent">
                             <div class="listing-thumb">
                                 <a href="#" class="main-link">
@@ -554,7 +544,7 @@
                                                 Стоимость работы
                                             </td>
                                             <td class = "time_service first_time_service">
-                                                от <span>500</span> MDL.
+                                                от <span>150</span> MDL.
                                             </td>
                                         </tr>
                                         <tr>
@@ -562,7 +552,7 @@
                                                 Стоимость запчастей
                                             </td>
                                             <td class = "time_service second_time_service">
-                                                от 200 MDL.
+                                                от 100 MDL.
                                             </td>
                                         </tr>
                                     </table>
