--- a/remont-noutbukov.html
+++ b/remont-noutbukov.html
@@ -103,7 +103,7 @@
                                 <div class="carousel-caption">
                                     <h2>Замена матрицы</h2>
                                     <ul class="list-inline list-unstyled">
-                                        <li>стоимость работы от 400 MDL</li>
+                                        <li>стоимость работы от 100 MDL</li>
                                         <li>стоимость матрицы от 1150 MDL</li>
                                         <li>время ремонта от 1 часа</li>
                                     </ul>
@@ -125,8 +125,8 @@
                                 <div class="carousel-caption">
                                     <h2>Чистка ноубука</h2>
                                     <ul class="list-inline list-unstyled">
-                                        <li>стоимость работы от 250 MDL</li>
-                                        <li>время ремонта от 2 часов</li>
+                                        <li>стоимость работы от 150 MDL</li>
+                                        <li>время ремонта от 1 часа</li>
                                     </ul>
                                     <p>
                                         Если ноутбук перегревается и сильно шумит, то скорее всего его внутренности пора чистить от пыли.
@@ -253,7 +253,7 @@
                                                 Стоимость работы
                                             </td>
                                             <td class = "time_service first_time_service">
-                                                от <span>400</span> MDL.
+                                                от <span>100</span> MDL.
                                             </td>
                                         </tr>
                                         <tr>
@@ -301,7 +301,7 @@
                                                 Время ремонта
                                             </td>
                                             <td class = "time_service second_time_service">
-                                                от 2 часов
+                                                от 1 часа
                                             </td>
                                         </tr>
                                         <tr>
@@ -309,15 +309,12 @@
                                                 Стоимость работы
                                             </td>
                                             <td class = "time_service first_time_service">
-                                                от <span>250</span> MDL.
+                                                от <span>150</span> MDL.
                                             </td>
                                         </tr>
                                     </table>
-
-
                                 </div>
                             </div>
-
                         </article>
 
                         <article class="col-md-3 col-sm-6 listing-item rent">
@@ -353,12 +350,10 @@
                                             </td>
                                         </tr>
                                     </table>
-
-
                                 </div>
                             </div>
-
                         </article>
+
                         <article class="col-md-3 col-sm-6 listing-item rent">
                             <div class="listing-thumb">
                                 <a href="#" class="main-link">
@@ -403,14 +398,14 @@
                                                 Стоимость запчастей 
                                             </td>
                                             <td class = "time_service first_time_service">
-                                                от 500 MDL.
+                                                от 450 MDL.
                                             </td>
                                         </tr>
                                     </table>
                                 </div>
                             </div>
-
                         </article>
+
                         <article class="col-md-3 col-sm-6 listing-item rent">
                             <div class="listing-thumb">
                                 <a href="#" class="main-link">
@@ -451,11 +446,10 @@
                                             </td>
                                         </tr>
                                     </table>
-
                                 </div>
                             </div>
-
                         </article>
+
                         <article class="col-md-3 col-sm-6 listing-item rent">
                             <div class="listing-thumb">
                                 <a href="#" class="main-link">
@@ -500,8 +494,8 @@
                                     </table>
                                 </div>
                             </div>
-
                         </article>
+
                         <article class="col-md-3 col-sm-6 listing-item rent">
                             <div class="listing-thumb">
                                 <a href="#" class="main-link">
@@ -646,7 +640,7 @@
                                                 Стоимость работы
                                             </td>
                                             <td class = "time_service first_time_service">
-                                                от <span>800</span> MDL.
+                                                от <span>400</span> MDL.
                                             </td>
                                         </tr>
                                     </table>
