--- a/remont-televizorov.html
+++ b/remont-televizorov.html
@@ -144,9 +144,9 @@
                                 <div class="carousel-caption">
                                     <h2>Замена динамиков</h2>
                                     <ul class="list-inline list-unstyled">
-                                        <li>стоимость от 250 MDL</li>
-                                        <li>стоимость запчастей от 200 MDL</li>
-                                        <li>время ремонта от 1,5 часов</li>
+                                        <li>стоимость от 150 MDL</li>
+                                        <li>стоимость запчастей от 100 MDL</li>
+                                        <li>время ремонта от 1,5 часа</li>
                                     </ul>
                                     <p>
                                         Признаки неисправности: звука нет в принципе, или он сильно искажён. 
